replace ng with node ng

--- a/src/webAPI/webAPI.csproj
+++ b/src/webAPI/webAPI.csproj
@@ -27,7 +27,7 @@
 
   <Target Name="myTarget" BeforeTargets="BeforePublish">
 	  <Exec Command="npm install" WorkingDirectory="AngularFrontEnd"/>
-      <Exec Command="ng build -prod --output-path=..\wwwroot" WorkingDirectory="AngularFrontEnd"/>
+      <Exec Command="node node_modules\angular-cli\bin\ng build -prod --output-path=..\wwwroot" WorkingDirectory="AngularFrontEnd"/>
   </Target>
 
 </Project>
